--- a/.github/workflows/blog-update.yml
+++ b/.github/workflows/blog-update.yml
@@ -27,3 +27,5 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'Update README with latest blog posts'
+          token: ${{ secrets.GITHUB_TOKEN }}
+
