--- a/.github/workflows/blog-update.yml
+++ b/.github/workflows/blog-update.yml
@@ -24,8 +24,11 @@ jobs:
         run: node ./scripts/parse-rss.js > README.md
 
       - name: Commit and Push changes
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Update README with latest blog posts'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master 
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+
 
