--- a/.github/workflows/blog-update.yml
+++ b/.github/workflows/blog-update.yml
@@ -3,19 +3,19 @@ name: Update README with Latest Blog Posts
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *' 
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v3 
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  
         with:
-          node-version: '20.8.1'
+          node-version: '20.x' 
 
       - name: Install dependencies
         run: npm install rss-parser
@@ -23,18 +23,18 @@ jobs:
       - name: Parse RSS and Update README
         run: node ./scripts/parse-rss.js > README.md
 
-      - name: Pull latest changes
+      - name: Configure git
         run: |
           git config --global user.email "ben014335@gmail.com"
           git config --global user.name "Ming"
-          git pull origin master --rebase
+
+      - name: Pull latest changes with rebase
+        run: git pull --rebase origin master
 
       - name: Commit and Push changes
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'Update README with latest blog posts'
-          branch: master 
+          branch: master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
