--- a/.github/workflows/blog-update.yml
+++ b/.github/workflows/blog-update.yml
@@ -3,7 +3,7 @@ name: Update README with Latest Blog Posts
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '20 * * * *'
 
 jobs:
   update-readme:
